[package]
name = "golem-stt-whisper"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with OpenAI Whisper transcription API on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-stt/durability"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
http = "=1.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
once_cell = "1.21.3"
bytes = "1.10.1"

futures-concurrency = "7.6.3"
itertools = "0.14.0"

[dev-dependencies]
multipart-2021 = "0.19.0"

