[workspace]
resolver = "2"
members = ["components-rust/*", "common-rust/*"]

[profile.release]
opt-level = "s"
lto = true

[workspace.lints.rust]
# Allow the mismatched lifetime syntaxes lint that causes issues in some Rust versions
mismatched_lifetime_syntaxes = "allow"
# Allow dead code warnings that become errors under -D warnings
dead_code = "allow"

[workspace.dependencies]
golem-rust = { version = "1.6.0", features = [
    "export_load_snapshot",
    "export_save_snapshot",
    "export_oplog_processor",
] }
reqwest = { git = "https://github.com/zivergetech/reqwest", branch = "update-may-2025", features = [
    "json",
] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
