[workspace]
resolver = "2"
members = ["components-rust/*", "common-rust/*"]

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]
golem-rust = "1.2.1"
reqwest = { git = "https://github.com/zivergetech/reqwest", branch = "update-jun-2024", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = "0.26.0"
