[package]
name = "golem-tts-aws"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with AWS Text to Speech APIs on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-tts/durability"]

[dependencies]
golem-tts = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
golem-wasi-http = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hmac-sha256 = "1.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2.5.4"
